Add cocktails skeleton

--- a/src/config.ini
+++ b/src/config.ini
@@ -4,3 +4,46 @@ level = INFO
 to_file = no
 logfile = bot.log
 format = %(asctime)s - %(name)s - %(levelname)s - %(message)s
+
+[Cocktails]
+alkohol = Vodka, Gin, Amaretto, Tequila, Rum, Baileys,Whiskey,Aperol
+alkoholmengen = 2, 3, 4, 5
+mische = Cola, Tonic, Grapefruitsaft, Gingerbeer, Sprite, Redbull, Gingerale, Organgensaft, Wasser, Ananassaft
+fancies = Drink, Kreation, Genuss, Spezialität, Tinktur, Träumchen, Cocktail, Verführung, Offenbarung, Extravaganza, Emulsion, - Exklusiv, Trank, Gebräu, Fusel, Sensation
+extras = Ein Schuss Holunderblütensirup,
+          Ein Schuss Grenadine Sirup,
+          Eine Olive,
+          Zwei Scheiben Gurken,
+          Eine Zitronenscheibe,
+          Ein Zweig Rosmarin,
+          Einige Blätter Minze,
+          Ein Shot Espresso,
+          Ein Spritzer Limettensaft,
+          2cl Zuckersirup,
+          Eine Scheibe Ananas,
+          Ein Esslöffel Honig
+gifs = https://media.giphy.com/media/3o7TKDhgKC52OZhV0k/giphy.gif,
+        https://media.giphy.com/media/VEiFGPt9w0sZRgHVol/giphy.gif,
+        https://media.giphy.com/media/YTQZAZWaQ9vA7u1kzW/giphy.gif,
+        https://media.giphy.com/media/vWdiIPTL5L2w/giphy.gif,
+        https://media.giphy.com/media/xT0BKIRMy9i07uWZsk/giphy.gif,
+        https://media.giphy.com/media/lFFn6OTx5NRUQ/giphy.gif,
+        https://media.giphy.com/media/Ab3YPEp1GFa1y/giphy.gif,
+        https://media.giphy.com/media/ykvb4xmHlrB5u/giphy.gif,
+        https://media.giphy.com/media/xT0xeJc523UZqcMSJ2/giphy.gif,
+        https://media.giphy.com/media/3inv2KivKYloY/giphy.gif,
+        https://media.giphy.com/media/VofNMYo4Bl07C/giphy.gif,
+        https://media.giphy.com/media/148Y9nqgV3akko/giphy.gif,
+        https://media.giphy.com/media/149EV8wlV75ZQc/giphy.gif,
+        https://media.giphy.com/media/YOvOkaS5ZKfimDIgwJ/giphy.gif,
+        https://media.giphy.com/media/11dVFjhFBOtqWQ/giphy.gif,
+        https://media.giphy.com/media/FTD8lJGJpyKuA/giphy.gif,
+        https://media.giphy.com/media/2NhS1u4WTNMHK/giphy.gif,
+        https://media.giphy.com/media/ROawZl2vc95q8/giphy.gif,
+        https://media.giphy.com/media/1yiOi2LYLMEBOriVBJ/giphy.gif,
+        https://media.giphy.com/media/LrGTmjBFNNf4Klbuhd/giphy.gif,
+        https://media.giphy.com/media/l0CLTHnAypYSXaeru/giphy.gif,
+        https://media.giphy.com/media/2vljlWVJ8eNzTjgxRK/giphy.gif,
+        https://media.giphy.com/media/l3q2V26WHrjvTmlDq/giphy.gif,
+        https://media.giphy.com/media/TEms3NjKGUrkWfv7uG/giphy.gif
+personen = Jule, Zey, Vale, Rasi, Emmchen, Domi, Maio, Gabriel, Jackie, Sandy, Carla, Rasmus' mysteriöse Freundin, Marco
