Calendar: bot sends reminder each day at 18:00

--- a/src/config.ini
+++ b/src/config.ini
@@ -5,6 +5,9 @@ to_file = no
 logfile = bot.log
 format = %(asctime)s - %(name)s - %(levelname)s - %(message)s
 
+[Scheduler]
+
+
 [Cocktails]
 alkohol = Vodka, Gin, Amaretto, Tequila, Rum, Baileys,Whiskey,Aperol
 alkoholmengen = 2, 3, 4, 5
@@ -47,3 +50,4 @@ gifs = https://media.giphy.com/media/3o7TKDhgKC52OZhV0k/giphy.gif,
         https://media.giphy.com/media/l3q2V26WHrjvTmlDq/giphy.gif,
         https://media.giphy.com/media/TEms3NjKGUrkWfv7uG/giphy.gif
 personen = Jule, Zey, Vale, Rasi, Emmchen, Domi, Maio, Gabriel, Jackie, Sandy, Carla, Rasmus' mysteriöse Freundin, Marco
+
